--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -1,5 +1,5 @@
 Train:
-  batch_size: 1
+  batch_size: 16
   lr: 0.001
   betas: [0.9, 0.999]
   weight_decay: 0.01
@@ -12,4 +12,8 @@ network:
   model: MFNet
 
 data:
+  train_data_dir: data/datasets/DNS_subset_10/train/noisy
+  train_label_dir: data/datasets/DNS_subset_10/train/clean
+  val_data_dir: data/datasets/DNS_subset_10/val/noisy
+  val_label_dir: data/datasets/DNS_subset_10/val/clean
   save_best: True
