Lol just one more commit before I start training, added some logic to save mid epoch + save optimizer state in case my PC gets struck by lightning or something

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ DNS_scripts/datasets\training_set_apr14\noise/*
 DNS_scripts/datasets\training_set_apr14\noisy/*
 .venv/*
 */__pycache__/*
+/__pycache__/*
+models/*
